--- a/.gitignore
+++ b/.gitignore
@@ -173,4 +173,10 @@ Temporary Items
 # iCloud generated files
 *.icloud
 
+/.idea
+/.gradle
+/gradle
+/build
+
+
 # End of https://www.toptal.com/developers/gitignore/api/macos,intellij,java
